# Microscope

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CODEOWNERS  M1_COMPLETE.md  M1_FIXES_COMPLETE.md  Makefile  PR_TEMPLATE_M1.md  README.md  VISION.md  fix_gates.py  generate_baselines.py  make.ps1  mkdocs.yml  mypy-baseline.txt  mypy.ini  pyproject.toml  pytest.ini  pytest_cpu.xml  pytest_precision.xml  ruff-baseline.toml  run_airy_test.bat  run_validation_suite.py  solver_src.txt  test_airy_accuracy.py  test_m1.py  test_m1_fixes.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  m3_ci.yml
.venv311/: pyvenv.cfg
Directives/: align.md  claudetask0.md  cursortask0.md  goals.md  hilevel.md  microscope_sim_v_0.md  optics_sim_project_blueprint_v_0.md  vision.md
Directives/cursor/: M3_ci_release_tasks.md  M3_ci_smoke_wiring.md  precision_policy_ci.md  precision_policy_ci_followup.md  refactor.md
Directives/reports/claudereports/: 2025-08-31_claude_m1_report.md  2025-08-31_claude_m2_report.md  M1_BPM_complete_20250101.md  M1_implementation_report_20250101.md  as_kernel_fix_report.md  claudereport.md  log.md  m3_cpu_baseline_fix_report.md  m3_cpu_baseline_fix_report_20250129.md  m3_final_report.md  m3_microscope_report.md  precision_policy_complete_20250101.md
Directives/reports/cursorreports/: 0_lint.txt  1_test-cpu.txt  2025-08-30_cursor_report.md  2025-08-31_cursor_report.md  2025-08-31_gpu_status.md  2025-09-01_ci_hardening_cursor_report.md  2025-09-01_cursor_report.md  2025-09-02_ci_pipeline_trigger.md  2025-09-02_m3_ci_cursor_report.md  2_test-gpu.txt  Cursorreport.md  ci_probe.md  latest_gpu_env.txt
OBJECTIVES/: 000_bootstrap.md  001_package_layout.md  002_cli_scaffold.md  003_config_models.md  README.md
actions-runner/: .credentials  .credentials_rsaparams  .runner
actions-runner/_work/_PipelineMapping/MoniVibe/Microscope/: PipelineFolder.json
actions-runner/_work/_actions/actions/setup-python/: v5.completed
docs/: CONFIG.md  GOALS.md  HILEVEL.md  examples.md  metrics.md  precision_policy.md
examples/: gpu_smoke_as_multi_slice.yml  gpu_smoke_bpm_vector.yml  gpu_smoke_ssf.yml  high_na.yml  low_na.yml  mid_na.yml  minimal.yaml
examples/m3/: as_airy.yaml  bpm_ss_grating.yaml  bpm_wa_highNA.yaml
scripts/: bootstrap.ps1  bootstrap.sh  ci_trigger.ps1  ci_trigger.sh  print_env.py  verify.ps1  verify.sh
src/microscope/: __init__.py
src/microscope/cli/: __main__.py  main.py
src/microscope/core/: __init__.py  config.py  errors.py  frames.py  logging.py  sampling.py  types.py  units.py
src/microscope/gpu/: __init__.py
src/microscope/io/: __init__.py
src/microscope/physics/: __init__.py
src/microscope/presets/: __init__.py
src/microscope/validate/: __init__.py
src/optics_sim/: __init__.py
src/optics_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/optics_sim/cli/: __init__.py  __main__.py  m3_run.py  m3_run_main.py  run.py
src/optics_sim/components/: __init__.py  aperture.py  bs_stub.py  lens_thick.py  lens_thin.py  mirror_stub.py  phase_grating.py
src/optics_sim/core/: __init__.py  config.py  frames.py  precision.py
src/optics_sim/io/: tiff.py
src/optics_sim/logging/: logs.py
src/optics_sim/metrics/: __init__.py  m3_metrics.py  metrics_config.json
src/optics_sim/prop/: __init__.py  plan.py  samplers.py
src/optics_sim/prop/solvers/: __init__.py  as_multi_slice.py  bpm_split_step_fourier.py  bpm_split_step_fourier_enhanced.py  bpm_vector_wide.py  bpm_vector_wide_enhanced.py  bpm_vector_wide_fixed.py  m3_angular_spectrum.py  m3_split_step_bpm.py  m3_wide_angle_bpm.py
src/optics_sim/recorders/: __init__.py  planes.py
src/optics_sim/runtime/: budget.py  checkpoints.py  resume.py
src/optics_sim/sources/: __init__.py  base.py  gaussian_finite_band.py
src/optics_sim/validation/: cases.py  metrics.py
tests/: conftest.py  test_aperture_airy.py  test_cli.py  test_config_roundtrip.py  test_frames.py  test_gpu_smoke.py  test_grating_orders.py  test_imports.py  test_io_shapes_meta.py  test_lens_paraxial.py  test_precision_policy.py  test_solvers_gaussian_free_space.py  test_sources_gauss.py
