[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optics-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "tifffile>=2024.5.22",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
# Install one of these manually depending on environment
cpu = ["torch==2.3.*"]
cuda = ["torch==2.3.*"]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "scipy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["optics_sim*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","N","W","PL","PYI"]

# Per-file ignores must live under [tool.ruff] as of recent Ruff
[tool.ruff.per-file-ignores]
# Loosen lint rules for tests to keep focus on functionality
"tests/**/*" = [
  "N806",  # non-lowercase variable in function (common in math/tests)
  "PLR2004",  # magic values in comparisons
  "PLR0915",  # too many statements in function
  "PLC0415",  # import not at top of file (intentional in tests)
  "F401",  # unused imports (guarded optional deps)
  "F841",  # assigned but unused (documenting behavior)
  "E501",  # line length in test output
  "PLW2901",  # with-statement variable overwritten
]
# Root-level ad-hoc tests
"test_*.py" = [
  "N806",
  "PLR2004",
  "PLR0915",
  "PLC0415",
  "F401",
  "F841",
  "E501",
]
# Math-heavy modules: allow uppercase temporaries and magic numbers
"src/optics_sim/prop/solvers/bpm_vector_wide.py" = ["N806", "PLR2004"]
"src/optics_sim/validation/cases.py" = ["N806", "PLR0913", "PLC0415", "F841", "PLR2004"]
"src/optics_sim/validation/metrics.py" = ["N806", "F841", "PLR2004"]
"src/optics_sim/recorders/planes.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true


