[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optics-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "tifffile>=2024.5.22",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
# Install one of these manually depending on environment
cpu = ["torch==2.3.*"]
cuda = ["torch==2.3.*"]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "scipy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["optics_sim*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Keep lint minimal to ensure green CI quickly; expand later as needed
select = ["I"]

[tool.ruff.per-file-ignores]
# Loosen rules for tests to keep focus on functionality
"tests/**/*" = ["F401", "F841", "E501"]
# Root-level ad-hoc tests
"test_*.py" = ["F401", "F841", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true


